k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bingo-helper
  labels:
    app: bingo-helper
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: bingo-helper
